--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ORION 2k26 - Doomsday Protocol</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&family=Orbitron:wght@400;700;900&family=Rajdhani:wght@300;500;700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&family=Orbitron:wght@400;700;900&family=Rajdhani:wght@300;500;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
+
 <body>
     <div class="noise-overlay"></div>
     <div class="scanline"></div>
@@ -23,7 +27,9 @@
             <a href="#rules" class="nav-item">PROTOCOLS</a>
             <a href="#contact" class="nav-item">COMMUNICATIONS</a>
         </div>
-        <button class="register-btn" onclick="window.location.href='#register'">INITIATE REGISTRATION</button>
+        <button class="register-btn"
+            onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSc1miQmNmZt3JqvPi3isSw8ejKA5eULTukpJN5lR1YTTKagig/viewform?usp=send_form', '_blank')">INITIATE
+            REGISTRATION</button>
     </nav>
 
     <!-- Hero Section -->
@@ -109,4 +115,5 @@
     <script src="data.js"></script>
     <script src="script.js"></script>
 </body>
+
 </html>
