--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
         href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&family=Orbitron:wght@400;700;900&family=Rajdhani:wght@300;500;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="effects.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 
 <body>
     <div class="noise-overlay"></div>
     <div class="scanline"></div>
+    <canvas id="matrix-rain"></canvas>
 
     <!-- Navigation -->
     <nav class="cyber-nav">
@@ -35,7 +37,8 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-content">
-            <h2 class="sub-hero">KONGU ENGINEERING COLLEGE PRESENTS</h2>
+            <h2 class="sub-hero">KONGU ENGINEERING COLLEGE/h2>
+            <h3 class="association">ASSOCIATION OF COMPUTER APPLICATIONS PRESENTS</h3>
             <h1 class="glitch-large" data-text="ORION 2K26">ORION 2K26</h1>
             <p class="hero-date">30.01.2026 // DOOMSDAY CLOCK TICKING</p>
             <div class="countdown-container">
@@ -104,7 +107,7 @@
         </div>
         <div class="contact-info">
             <p>Department of Computer Applications</p>
-            <p>Kongu Engineering College, Perundurai</p>
+            <p>Kongu Engineering College, Perundurai, Erode - 638060</p>
         </div>
     </section>
 
