--- a/index.html
+++ b/index.html
@@ -37,10 +37,12 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-content">
-            <h2 class="sub-hero">KONGU ENGINEERING COLLEGE/h2>
+            <h2 class="sub-hero">KONGU ENGINEERING COLLEGE</h2>
             <h3 class="association">ASSOCIATION OF COMPUTER APPLICATIONS PRESENTS</h3>
             <h1 class="glitch-large" data-text="ORION 2K26">ORION 2K26</h1>
             <p class="hero-date">30.01.2026 // DOOMSDAY CLOCK TICKING</p>
+            <p class="hero-date" style="color: var(--text-primary); margin-top: -20px; font-size: 1.2rem;">📍 C K
+                Prahalad Seminar Hall (MCA/MBA Block)</p>
             <div class="countdown-container">
                 <div class="time-segment">
                     <span id="days">00</span>
@@ -108,6 +110,7 @@
         <div class="contact-info">
             <p>Department of Computer Applications</p>
             <p>Kongu Engineering College, Perundurai, Erode - 638060</p>
+            <p style="margin-top: 15px; color: var(--accent);">📍 Venue: C K Prahalad Seminar Hall (MCA/MBA Block)</p>
         </div>
     </section>
 
