feat: Add dedicated event rules page, include event subtitles, and update footer copyright.

--- a/index.html
+++ b/index.html
@@ -41,8 +41,6 @@
             <h3 class="association">ASSOCIATION OF COMPUTER APPLICATIONS PRESENTS</h3>
             <h1 class="glitch-large" data-text="ORION 2K26">ORION 2K26</h1>
             <p class="hero-date">30.01.2026 // DOOMSDAY CLOCK TICKING</p>
-            <p class="hero-date" style="color: var(--text-primary); margin-top: -20px; font-size: 1.2rem;">📍 C K
-                Prahalad Seminar Hall (MCA/MBA Block)</p>
             <div class="countdown-container">
                 <div class="time-segment">
                     <span id="days">00</span>
@@ -76,31 +74,7 @@
         </div>
     </section>
 
-    <!-- Event Modal -->
-    <div id="event-modal" class="modal">
-        <div class="modal-content">
-            <span class="close-modal">&times;</span>
-            <h2 id="modal-title">EVENT NAME</h2>
-            <div class="modal-body">
-                <div class="modal-section">
-                    <h3>MISSION BRIEF</h3>
-                    <p id="modal-desc">Description goes here.</p>
-                </div>
-                <div class="modal-section">
-                    <h3>ROSTER SIZE</h3>
-                    <p id="modal-team">Individual / Team</p>
-                </div>
-                <div class="modal-section">
-                    <h3>PROTOCOL (RULES)</h3>
-                    <ul id="modal-rules"></ul>
-                </div>
-                <div class="modal-section">
-                    <h3>MISSION COMMANDERS</h3>
-                    <ul id="modal-coordinators"></ul>
-                </div>
-            </div>
-        </div>
-    </div>
+
 
     <!-- Contact Section -->
     <section id="contact" class="contact-section">
@@ -115,7 +89,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2026 ORION. SYSTEM ONLINE.</p>
+        <p>&copy; Kongu Engineering College, Perundurai, Erode - 638060 </p>
     </footer>
 
     <script src="data.js"></script>
