Remove navigation links, refine text casing and footer content, and enhance audio playback with an extended navigation delay.

--- a/index.html
+++ b/index.html
@@ -23,12 +23,6 @@
     <!-- Navigation -->
     <nav class="cyber-nav">
         <div class="logo glitch" data-text="ORION 2K26">ORION 2K26</div>
-        <div class="nav-links">
-            <a href="#home" class="nav-item">HOME</a>
-            <a href="#events" class="nav-item">OPERATIONS</a>
-            <a href="#rules" class="nav-item">PROTOCOLS</a>
-            <a href="#contact" class="nav-item">COMMUNICATIONS</a>
-        </div>
         <button class="register-btn"
             onclick="window.open('https://docs.google.com/forms/d/e/1FAIpQLSc1miQmNmZt3JqvPi3isSw8ejKA5eULTukpJN5lR1YTTKagig/viewform?usp=send_form', '_blank')">INITIATE
             REGISTRATION</button>
@@ -38,7 +32,7 @@
     <section id="home" class="hero">
         <div class="hero-content">
             <h2 class="sub-hero">KONGU ENGINEERING COLLEGE</h2>
-            <h3 class="association">ASSOCIATION OF COMPUTER APPLICATIONS PRESENTS</h3>
+            <h3 class="association">Association of Computer Applications Presents</h3>
             <h1 class="glitch-large" data-text="ORION 2K26">ORION 2K26</h1>
             <p class="hero-date">30.01.2026 // DOOMSDAY CLOCK TICKING</p>
             <div class="countdown-container">
@@ -179,7 +173,8 @@
     </section>
 
     <footer>
-        <p>Presented by:department of computer applications, Kongu Engineering College, Perundurai, Erode - 638060 </p>
+        <p>Presented by:department of computer applications ASSOCIATION , Kongu Engineering College, Perundurai, Erode -
+            638060 </p>
     </footer>
 
     <script src="data.js"></script>
@@ -190,7 +185,7 @@
         <source src="villain_theme.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
-    <audio id="ui-click">
+    <audio id="ui-click" preload="auto">
         <source src="click_sound.mp3" type="audio/mpeg">
     </audio>
 </body>
