feat: Add Instagram link to contact information.

--- a/index.html
+++ b/index.html
@@ -171,6 +171,12 @@
                         class="uplink-email">
                         <i class="fas fa-envelope"></i> kecmca2k26@gmail.com
                     </a>
+
+                    <br>
+                    <a href="https://www.instagram.com/kec__mca?igsh=cjFncjI1azNucGNm" target="_blank"
+                        class="uplink-email" style="margin-top: 15px; display: inline-block;">
+                        <i class="fab fa-instagram"></i> @kec__mca
+                    </a>
                 </div>
             </div>
         </div>
