--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ORION 2k26 - Doomsday Protocol</title>
+    <title>ORION 2k26</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -34,7 +34,7 @@
             <h2 class="sub-hero">KONGU ENGINEERING COLLEGE</h2>
             <h3 class="association">Association of Computer Applications Presents</h3>
             <h1 class="glitch-large" data-text="ORION 2K26">ORION 2K26</h1>
-            <p class="hero-date">30.01.2026 // DOOMSDAY CLOCK TICKING</p>
+            <p class="hero-date">30.01.2026 //  CLOCK TICKING</p>
             <div class="countdown-container">
                 <div class="time-segment">
                     <span id="days">00</span>
