feat: Add Cyber Security Workshop event and dynamically display external links in event details.

--- a/index.html
+++ b/index.html
@@ -186,8 +186,14 @@
     </section>
 
     <footer>
-        <p>Presented by:department of computer applications ASSOCIATION , Kongu Engineering College, Perundurai, Erode -
-            638060 </p>
+        <p>Presented by: Department of Computer Applications Association, Kongu Engineering College, Perundurai, Erode -
+            638060</p>
+        <div class="footer-socials">
+            <a href="https://www.linkedin.com/in/mca-kec-6162063a3?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+                target="_blank" class="footer-social-link">
+                <i class="fab fa-linkedin"></i> CONNECT ON LINKEDIN
+            </a>
+        </div>
     </footer>
 
     <script src="data.js"></script>
