feat: Introduce dedicated workshop data and display section, update event detail page to support workshops, and consolidate LinkedIn links.

--- a/index.html
+++ b/index.html
@@ -60,6 +60,17 @@
         </div>
     </section>
 
+    <!-- Workshop Section -->
+    <section id="workshops" class="workshop-section">
+        <div class="section-header">
+            <h2 class="section-title">SPECIAL TRAINING</h2>
+            <div class="section-line"></div>
+        </div>
+        <div class="workshop-container" id="workshop-grid">
+            <!-- Workshops will be injected by JS -->
+        </div>
+    </section>
+
     <!-- Events Section -->
     <section id="events" class="events-section">
         <div class="section-header">
@@ -68,6 +79,24 @@
         </div>
         <div class="events-grid" id="events-grid">
             <!-- Events will be injected by JS -->
+        </div>
+    </section>
+
+    <!-- LinkedIn Hub Section -->
+    <section class="linkedin-hub">
+        <div class="hub-container">
+            <div class="hub-content">
+                <i class="fab fa-linkedin hub-icon"></i>
+                <div class="hub-text-group">
+                    <h2 class="hub-title">CONNECT WITH THE COMMAND</h2>
+                    <p class="hub-subtitle">Follow our official LinkedIn array for real-time mission updates and
+                        networking.</p>
+                </div>
+                <a href="https://www.linkedin.com/in/mca-kec-6162063a3?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+                    target="_blank" class="hub-btn-glow">
+                    ESTABLISH LINK <i class="fas fa-external-link-alt"></i>
+                </a>
+            </div>
         </div>
     </section>
 
@@ -188,12 +217,6 @@
     <footer>
         <p>Presented by: Department of Computer Applications Association, Kongu Engineering College, Perundurai, Erode -
             638060</p>
-        <div class="footer-socials">
-            <a href="https://www.linkedin.com/in/mca-kec-6162063a3?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
-                target="_blank" class="footer-social-link">
-                <i class="fab fa-linkedin"></i> CONNECT ON LINKEDIN
-            </a>
-        </div>
     </footer>
 
     <script src="data.js"></script>
