feat: Remove dedicated LinkedIn hub section and integrate LinkedIn link into footer.

--- a/index.html
+++ b/index.html
@@ -60,17 +60,6 @@
         </div>
     </section>
 
-    <!-- Workshop Section -->
-    <section id="workshops" class="workshop-section">
-        <div class="section-header">
-            <h2 class="section-title">SPECIAL TRAINING</h2>
-            <div class="section-line"></div>
-        </div>
-        <div class="workshop-container" id="workshop-grid">
-            <!-- Workshops will be injected by JS -->
-        </div>
-    </section>
-
     <!-- Events Section -->
     <section id="events" class="events-section">
         <div class="section-header">
@@ -82,23 +71,18 @@
         </div>
     </section>
 
-    <!-- LinkedIn Hub Section -->
-    <section class="linkedin-hub">
-        <div class="hub-container">
-            <div class="hub-content">
-                <i class="fab fa-linkedin hub-icon"></i>
-                <div class="hub-text-group">
-                    <h2 class="hub-title">CONNECT WITH THE COMMAND</h2>
-                    <p class="hub-subtitle">Follow our official LinkedIn array for real-time mission updates and
-                        networking.</p>
-                </div>
-                <a href="https://www.linkedin.com/in/mca-kec-6162063a3?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
-                    target="_blank" class="hub-btn-glow">
-                    ESTABLISH LINK <i class="fas fa-external-link-alt"></i>
-                </a>
-            </div>
+    <!-- Workshop Section -->
+    <section id="workshops" class="workshop-section">
+        <div class="section-header">
+            <h2 class="section-title">SPECIAL TRAINING</h2>
+            <div class="section-line"></div>
+        </div>
+        <div class="workshop-container" id="workshop-grid">
+            <!-- Workshops will be injected by JS -->
         </div>
     </section>
+
+
 
 
 
@@ -208,6 +192,12 @@
                     <a href="https://www.instagram.com/kec__mca?igsh=cjFncjI1azNucGNm" target="_blank"
                         class="uplink-email" style="margin-top: 15px; display: inline-block;">
                         <i class="fab fa-instagram"></i> @kec__mca
+                    </a>
+
+                    <br>
+                    <a href="https://www.linkedin.com/in/mca-kec-6162063a3?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"
+                        target="_blank" class="uplink-email" style="margin-top: 15px; display: inline-block;">
+                        <i class="fab fa-linkedin"></i> LinkedIn
                     </a>
                 </div>
             </div>
