--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
     <div class="scanline"></div>
     <canvas id="matrix-rain"></canvas>
 
+    <!-- Floating Spot Registration Badge -->
+    <div class="spot-float">
+        <div class="spot-float-ring"></div>
+        <div class="spot-float-inner">
+            <span class="spot-dot"></span>
+            <span class="spot-float-text">Spot Registration Available</span>
+        </div>
+    </div>
+
     <!-- Navigation -->
     <nav class="cyber-nav">
         <div class="logo glitch" data-text="ORION 2K26">ORION 2K26</div>
@@ -34,7 +43,6 @@
             <h2 class="sub-hero">KONGU ENGINEERING COLLEGE</h2>
             <h3 class="association">Association of Computer Applications Presents</h3>
             <h1 class="glitch-large" data-text="ORION 2K26">ORION 2K26</h1>
-            <p class="hero-date">05.03.2026</p>
             <div class="countdown-container">
                 <div class="time-segment">
                     <span id="days">00</span>
@@ -206,7 +214,8 @@
     <footer>
         <p>Presented by:department of computer applications ASSOCIATION , Kongu Engineering College, Perundurai, Erode -
             638060 </p>
-        <p>Designed with 🍵 by <a href="https://www.linkedin.com/in/karthikeyan-pandiyaraj-351015229 " target="_blank">Karthikeyan P</a></p>
+        <p>Designed with 🍵 by <a href="https://www.linkedin.com/in/karthikeyan-pandiyaraj-351015229 "
+                target="_blank">Karthikeyan P</a></p>
     </footer>
 
     <script src="data.js"></script>
